k8s/prediction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prediction-service
  namespace: ai-module
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prediction-service
  template:
    metadata:
      labels:
        app: prediction-service
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-1
      containers:
        - name: prediction-service
          image: prediction-service:1.2.1
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: index-fix
              mountPath: /app/index.js
              subPath: index.js
      volumes:
        - name: index-fix
          configMap:
            name: prediction-service-index
---
apiVersion: v1
kind: Service
metadata:
  name: prediction-service
  namespace: ai-module
spec:
  selector:
    app: prediction-service
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
